--- a/html/flex-it/pages/home/home-5.html
+++ b/html/flex-it/pages/home/home-5.html
@@ -58,29 +58,23 @@
         </form>
       </div>
       <div class="container">
-        <nav class="menu-navbar">
-          <div class="header-logo"><a class="logo-link" href="../home/home-5.html"><img class="logo-img light-logo" loading="lazy" src="../../assets/images/logo/logo-light.png" alt="logo"><img class="logo-img  dark-logo" loading="lazy" src="../../assets/images/logo/logo-dark.png" alt="logo"></a></div>
-          <div class="links menu-wrapper ">
-            <ul class="list-js links-list">
-              <li class="menu-item has-sub-menu"><a class="menu-link   active" href="home-5.html">Главная <i class="fas fa-plus  plus-icon"> </i></a></li>
-              <li class="menu-item has-sub-menu"><a class="menu-link" href="../service/service-single-argoTech.html">Заказная работа <i class="fas fa-plus  plus-icon"> </i></a></li>
-              <li class="menu-item has-sub-menu"><a class="menu-link" href="../branch/service-single-finance.html">Отрасли <i class="fas fa-plus  plus-icon"> </i></a></li>
-              <li class="menu-item has-sub-menu"><a class="menu-link" href="../solutions/service-single-1.html">Готовые решения<i class="fas fa-plus  plus-icon"> </i></a></li>
-              <li class="menu-item"><a class="menu-link  " href="../aboutUs/about-us.html">О компании </a></li>
-              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../portfolio/portfolio-grid.html">Портфолио <i class="fas fa-plus  plus-icon"> </i></a></li>
-            </ul>
+        <nav class="menu-navbar mb-4 mt-3">
+          <div class="header-logo" style="max-width: 300px; max-height: 300px">
+            <a class="logo-link" href="../home/home-5.html" >
+              <img class="logo-img light-logo logo-mobile" loading="lazy" src="../../assets/images/logo/sokol.svg" alt="logo"  />
+              <img class="logo-img  dark-logo logo-mobile" loading="lazy" src="../../assets/images/logo/sokol.svg" alt="logo"  />
+            </a>
           </div>
-          <div class="controls-box">
-            <!--Menu Toggler button-->
-            <div class="control  menu-toggler"><span></span><span></span><span></span></div>
-            <!--search Icon button-->
-            <div class="control header-search-btn"><i class="bi bi-search icon"></i></div>
-            <!--Dark/Light mode button-->
-            <div class="mode-switcher ">
-              <div class="switch-inner go-light " title="Switch To Light Mode "><i class="bi bi-sun icon "></i></div>
-              <div class="switch-inner go-dark" title="Switch To Dark Mode "><i class="bi bi-moon icon "></i></div>
-            </div>
-            <!--mini shoping cart-->
+          <div class="links menu-wrapper">
+            <ul class="list-js links-list text-center">
+              <li class="menu-item has-sub-menu"><a class="menu-link   active" href="home-5.html">Главная </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../service/service-single-argoTech.html">Заказная работа </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../branch/service-single-finance.html">Отрасли </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link" href="../solutions/service-single-1.html">Готовые решения</a></li>
+              <li class="menu-item"><a class="menu-link  " href="../aboutUs/about-us.html">О компании </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../portfolio/portfolio-grid.html">Портфолио </a></li>
+              <li class="menu-item has-sub-menu"><a class="menu-link  " href="../blog/blog-home-1-col.html">Новости </a></li>
+            </ul>
           </div>
         </nav>
       </div>
